# codex-usage

./: .gitignore  README.md  codex_token_usage.py  package.json  pricing.example.json  pyproject.toml
docs/: README.md  cli.md  live-session.md  pricing.md
tests/: conftest.py  test_costing.py  test_live_window_calc.py  test_parsing.py  test_sessions.py
