[project]
name = "codex-usage"
version = "0.1.0"
description = "Codex TUI token usage and cost reporter"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "codex-logs" }]
license = { text = "UNLICENSED" }

[project.scripts]
codex-usage = "codex_token_usage:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

